# docker_app1

./: Dockerfile  Dockerfile.dev  README.md  compose.yaml  model.py  pyproject.toml  route.py  test_route.py
