[tool.poetry]
name = "docker-con1"
version = "0.1.0"
description = ""
authors = ["Raheel <raheelam98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
